<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_to_analyze">Image to Analyze</string>
    <string name="home">Home</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="history">History</string>
    <string name="news">News</string>
    <string name="detect_skin_cancer">Detect Skin Cancer</string>
    <string name="choose_an_image">Choose an Image</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="tell_your_doctor">Tell your Doctor</string>
    <string name="crop_image">Crop Image</string>
    <string name="image">Image</string>
    <string name="label">Label</string>
    <string name="cancer">Cancer</string>
    <string name="_90">90%</string>
    <string name="result_image">Result Image</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="latest_news_about_cancer">Latest News About Cancer</string>
    <string name="no_news_found">No news found</string>
    <string name="no_history_found">No history found</string>
</resources>