<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".view.result.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


            <ImageView
                android:id="@+id/result_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_place_holder"
                android:contentDescription="@string/result_image" />

        <TextView
            android:id="@+id/result_text"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/result" />
        <ProgressBar
            android:id="@+id/percetage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressDrawable="@drawable/custom_bar"
            />


        <TextView
            android:id="@+id/tvTimeStamp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/time_stamp"/>


        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/tell_your_doctor"
            app:cornerRadius="?attr/cornerRadius"
            app:icon="@drawable/round_message_24"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/save"
            app:srcCompat="@drawable/saveicon"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            />

    </LinearLayout>
</ScrollView>